<resources>
    <string name="app_name">Sthoks</string>
    <string name="action_settings">Settings</string>
    <string name="acceptedEmail">Accepted format: example@email.co.za or example@email.com \10 or email.example@email.com or example2@email.com</string>
    <string name="acceptedPhone">Accepted format: 10 digit South African cell phone number starting with 0, e.g 0835166741</string>
    <string name="action_about">About App</string>
    <string name="app_version">App Version:</string>
    <string name="auth_error">You are not authorised to use this service.</string>
    <string name="bio_summary">A young, talented, bright and very ambitious web and android apps developer who is self-motivated with a strong technical background, possesses self-discipline and the ability to work with the minimum of supervision. Thokozane is a great team player who thrives on creating engaging creative solutions, he also is deadline orientated and has the ability to produce detailed technical specifications from client requirements.</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="close">Close</string>
    <string name="close_drawer">Close Drawer</string>
    <string name="company_name">Company Name</string>
    <string name="conn_timeout">Connection timed out.</string>
    <string name="contact">Contact Me</string>
    <string name="contactform">Contact Form</string>
    <string name="correct_answer">Correct answer</string>
    <string name="developer">Developed by:</string>
    <string name="email_address">Email Address</string>
    <string name="emptyEmail">Email field empty</string>
    <string name="emptyMessage">Empty message field</string>
    <string name="emptyName">Empty name field</string>
    <string name="emptyPhone">Phone field empty</string>
    <string name="fullname">THOKOZANE CHARLES NHLANGULELA</string>
    <string name="google_maps_key">YOUR_KEY_HERE</string>
    <string name="hooray">Hooray!!!</string>
    <string name="invalidEmail">Email address is invalid</string>
    <string name="invalidPhone">Phone number is invalid</string>
    <string name="licences">Open Source Licences</string>
    <string name="max_msg_length">Maximum message length: 300 characters</string>
    <string name="message">Message</string>
    <string name="message_sent">Message sent. Thank you.</string>
    <string name="my_location">My Location</string>
    <string name="name">Your Name</string>
    <string name="network_error">Network error occurred.</string>
    <string name="no_inte_descr">Something went wrong. Unable to connect to the internet. Please ensure that your mobile data is turned on and that you have internet access or connect to a Wi-Fi network and try again.</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="open_drawer">Open Drawer</string>
    <string name="parse_error">Error. Invalid response received from server.</string>
    <string name="phone">Phone Number</string>
    <string name="please_wait_a_moment">please wait a moment</string>
    <string name="retry">Retry</string>
    <string name="search_menu_title">Search</string>
    <string name="send_message">Send Message</string>
    <string name="server_error">Server error occurred.</string>
    <string name="title_activity_maps">Map</string>
    <string name="unexpectedError">Unexpected error occurred.</string>
    <string name="well_done">Well done!</string>
    <string name="title_activity_main2">Main2Activity</string>
</resources>