<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:background="@drawable/blueish_bg" android:layout_width="match_parent" android:layout_height="match_parent" app:layout_behavior="@string/appbar_scrolling_view_behavior">
    <ImageView android:id="@+id/cloud_imv" android:background="@drawable/ic_cloud_off_white_24dp" android:layout_width="100dp" android:layout_height="100dp" android:layout_marginTop="50dp" android:layout_centerHorizontal="true" android:contentDescription="@string/no_internet_connection"/>
    <TextView android:textSize="20sp" android:textStyle="bold" android:textColor="#ffffff" android:id="@+id/no_internet_tv1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="20dp" android:text="@string/no_internet_connection" android:layout_below="@+id/cloud_imv" android:layout_centerHorizontal="true"/>
    <TextView android:textSize="16sp" android:textColor="#ffffff" android:id="@+id/no_int_descr_tv" android:padding="16dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/no_inte_descr" android:layout_below="@+id/no_internet_tv1"/>
    <Button android:textColor="#ffffff" android:id="@+id/retryBtn" android:background="@drawable/whiteborder_blackbg_btn" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/retry" android:layout_below="@+id/no_int_descr_tv" android:layout_centerHorizontal="true"/>
</RelativeLayout>
