<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:paddingTop="@dimen/fab_margin" android:paddingBottom="@dimen/fab_margin" android:layout_width="match_parent" android:layout_height="match_parent">
    <androidx.cardview.widget.CardView android:id="@+id/app_card" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginBottom="3dp" app:cardElevation="4dp">
        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="30dp" android:layout_marginBottom="30dp" android:weightSum="3" android:paddingStart="@dimen/fab_margin">
            <TextView android:textStyle="bold" android:id="@+id/app_version_tv" android:layout_width="0dp" android:layout_height="wrap_content" android:text="@string/app_version" android:layout_weight="1"/>
            <TextView android:layout_width="0dp" android:layout_height="wrap_content" android:text="1.0" android:layout_weight="2"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView android:id="@+id/developer_card" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginBottom="3dp" android:layout_below="@+id/app_card" app:cardElevation="4dp">
        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="30dp" android:layout_marginBottom="30dp" android:weightSum="3" android:paddingStart="@dimen/fab_margin" android:paddingEnd="@dimen/fab_margin">
            <TextView android:textStyle="bold" android:layout_width="0dp" android:layout_height="wrap_content" android:text="@string/developer" android:layout_weight="1"/>
            <TextView android:layout_width="0dp" android:layout_height="wrap_content" android:text="@string/fullname" android:layout_weight="2"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView android:id="@+id/open_source_card" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginBottom="3dp" android:layout_below="@+id/developer_card" app:cardElevation="4dp">
        <TextView android:textStyle="bold" android:id="@+id/sourcesTv" android:paddingLeft="@dimen/fab_margin" android:layout_width="match_parent" android:layout_height="match_parent" android:layout_marginTop="30dp" android:layout_marginBottom="30dp" android:text="@string/licences"/>
    </androidx.cardview.widget.CardView>
</RelativeLayout>
