<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:id="@+id/constraintLayout" android:layout_width="match_parent" android:layout_height="match_parent">
    <RelativeLayout android:layout_width="match_parent" android:layout_height="match_parent">
        <androidx.cardview.widget.CardView android:id="@+id/summary_card" android:layout_width="match_parent" android:layout_height="wrap_content" app:cardBackgroundColor="#efefef" app:cardCornerRadius="3dp" app:cardElevation="4dp">
            <RelativeLayout android:layout_width="match_parent" android:layout_height="wrap_content">
                <TextView android:textSize="25sp" android:textStyle="bold" android:textColor="@android:color/black" android:id="@+id/name_tv" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/fab_margin" android:layout_marginBottom="@dimen/fab_margin" android:text="@string/fullname" android:fontFamily="serif-monospace" android:textAlignment="center"/>
                <TextView android:textSize="16sp" android:textStyle="bold" android:textColor="@android:color/black" android:id="@+id/summary_tv" android:padding="@dimen/fab_margin" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/bio_summary" android:layout_below="@+id/name_tv" android:fontFamily="casual"/>
            </RelativeLayout>
        </androidx.cardview.widget.CardView>
        <TextView android:textSize="14sp" android:textStyle="bold" android:textColor="@android:color/white" android:id="@+id/locationTv" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/my_location" android:layout_below="@+id/summary_card"/>
        <FrameLayout android:layout_width="match_parent" android:layout_height="500dp" android:layout_below="@+id/locationTv">
            <fragment android:name="com.google.android.gms.maps.SupportMapFragment" android:id="@+id/map" android:layout_width="match_parent" android:layout_height="match_parent"/>
        </FrameLayout>
    </RelativeLayout>
</androidx.core.widget.NestedScrollView>
