<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:background="@drawable/blueish_bg" android:layout_width="match_parent" android:layout_height="match_parent">
    <ScrollView android:id="@+id/inputsLayout" android:layout_width="match_parent" android:layout_height="wrap_content">
        <RelativeLayout android:layout_width="match_parent" android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputLayout android:textColorHint="@android:color/white" android:id="@+id/textInputLayout3" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="8dp" android:layout_marginBottom="8dp" android:layout_marginStart="8dp" android:layout_marginEnd="8dp">
                <com.google.android.material.textfield.TextInputEditText android:textColor="@android:color/white" android:id="@+id/name" android:layout_width="match_parent" android:layout_height="wrap_content" android:hint="@string/name" android:inputType="textPersonName"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout android:textColorHint="@android:color/white" android:id="@+id/textInputLayout" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="8dp" android:layout_marginBottom="8dp" android:layout_below="@+id/textInputLayout3" android:layout_marginStart="8dp" android:layout_marginEnd="8dp" app:errorEnabled="true">
                <com.google.android.material.textfield.TextInputEditText android:textColor="@android:color/white" android:id="@+id/email" android:layout_width="match_parent" android:layout_height="wrap_content" android:hint="@string/email_address" android:inputType="textEmailAddress"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout android:textColorHint="@android:color/white" android:id="@+id/textInputLayout2" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="8dp" android:layout_marginBottom="8dp" android:layout_below="@+id/textInputLayout" android:layout_marginStart="8dp" android:layout_marginEnd="8dp" app:errorEnabled="true">
                <com.google.android.material.textfield.TextInputEditText android:textColor="@android:color/white" android:id="@+id/phone" android:layout_width="match_parent" android:layout_height="wrap_content" android:hint="@string/phone" android:inputType="phone"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout android:textColorHint="@android:color/white" android:id="@+id/textInputLayout4" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="8dp" android:layout_marginBottom="8dp" android:layout_below="@+id/textInputLayout2" android:layout_marginStart="8dp" android:layout_marginEnd="8dp">
                <com.google.android.material.textfield.TextInputEditText android:textColor="@android:color/white" android:id="@+id/company" android:layout_width="match_parent" android:layout_height="wrap_content" android:hint="@string/company_name" android:inputType="textPersonName"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout android:textColorHint="@android:color/white" android:id="@+id/textInputLayout5" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="8dp" android:layout_marginBottom="8dp" android:layout_below="@+id/textInputLayout4" android:layout_marginStart="8dp" android:layout_marginEnd="8dp" app:errorEnabled="true">
                <com.google.android.material.textfield.TextInputEditText android:textColor="@android:color/white" android:id="@+id/message" android:layout_width="match_parent" android:layout_height="wrap_content" android:hint="@string/message" android:maxLength="300" android:inputType="textMultiLine"/>
            </com.google.android.material.textfield.TextInputLayout>
            <ProgressBar android:id="@+id/progressBar" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_below="@+id/textInputLayout5" android:layout_centerHorizontal="true"/>
            <Button android:textColor="@android:color/white" android:id="@+id/button" android:background="@drawable/whiteborder_blackbg_btn" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/send_message" android:layout_below="@+id/progressBar"/>
        </RelativeLayout>
    </ScrollView>
    <RelativeLayout android:id="@+id/responseLayout" android:background="@drawable/whiteborder_blackbg_btn" android:visibility="gone" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_margin="@dimen/fab_margin" android:layout_below="@+id/inputsLayout">
        <TextView android:textStyle="bold" android:textColor="@android:color/white" android:id="@+id/responseTv" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_margin="@dimen/fab_margin"/>
        <Button android:textColor="@android:color/white" android:id="@+id/responseBtn" android:background="@drawable/whiteborder_blackbg_btn" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@android:string/ok" android:layout_below="@+id/responseTv"/>
    </RelativeLayout>
</RelativeLayout>
