<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:padding="@dimen/fab_margin" android:layout_width="match_parent" android:layout_height="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout android:id="@+id/stars_img" android:layout_width="match_parent" android:layout_height="wrap_content">
        <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ic_star_gold_64dp" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintEnd_toEndOf="0" app:layout_constraintHorizontal_bias="0.245" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0" app:layout_constraintVertical_bias="0"/>
        <ImageView android:id="@+id/imageView2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ic_star_gold_64dp" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0" app:layout_constraintVertical_bias="0"/>
        <ImageView android:id="@+id/imageView" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ic_star_gold_64dp" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintEnd_toEndOf="0" app:layout_constraintHorizontal_bias="0.754" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0" app:layout_constraintVertical_bias="0"/>
        <ImageView android:id="@+id/imageView3" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ic_star_gold_64dp" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintEnd_toEndOf="0" app:layout_constraintHorizontal_bias="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0" app:layout_constraintVertical_bias="0"/>
        <ImageView android:id="@+id/imageView4" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ic_star_gold_64dp" android:layout_alignParentEnd="true" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintEnd_toEndOf="0" app:layout_constraintHorizontal_bias="1" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <TextView android:textSize="25sp" android:textStyle="bold" android:gravity="center_horizontal" android:id="@+id/hoorayTv" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/hooray" android:layout_below="@+id/stars_img"/>
    <TextView android:textSize="25sp" android:textStyle="bold" android:gravity="center_horizontal" android:id="@+id/crTv" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/correct_answer" android:layout_below="@+id/hoorayTv"/>
    <TextView android:textSize="25sp" android:textStyle="bold" android:gravity="center_horizontal" android:id="@+id/wdTv" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/well_done" android:layout_below="@+id/crTv"/>
    <Button android:textColor="@android:color/white" android:id="@+id/closeBtn" android:background="@drawable/whiteborder_blackbg_btn" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/close" android:layout_below="@+id/wdTv"/>
</RelativeLayout>
